# mercylog-datascript

./: README.md  index.html  pyproject.toml  requirements.txt
data/: data.json
datascript_demo/: datascript_demo.html  datascript_demo.py
datascript_demo/__target__/: datascript_demo.js  datascript_demo.map  datascript_demo.project  datascript_demo.py  org.transcrypt.__runtime__.js
docs/: datomic.md  dev.md  on_update.md
helpers/: util.py
mercylog_datascript/: __init__.py  core.py  datascript.py  mercylog_datascript.brython.js  mercylog_datascript.py
tests/: test_mercylog_datascript.py
