[tool.poetry]
name = "mercylog-datascript"
version = "0.1.4"
description = ""
authors = ["Rajiv Abraham <rajiv.abraham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
